Improve the API